Add GPU tests - update

--- a/07-gpu-tests/runbook-gpu.ipynb
+++ b/07-gpu-tests/runbook-gpu.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "3  kx-Lenovo-H520g  x86_64    1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Jan 14 02:29:25 2020       \n",
+      "Tue Jan 14 02:51:18 2020       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 410.57                 Driver Version: 410.57                    |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -85,13 +85,14 @@
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 105...  Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| 25%   31C    P8    N/A /  75W |   3775MiB /  4038MiB |      0%      Default |\n",
+      "| 25%   35C    P0    N/A /  75W |      0MiB /  4038MiB |      0%      Default |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
       "+-----------------------------------------------------------------------------+\n",
       "| Processes:                                                       GPU Memory |\n",
       "|  GPU       PID   Type   Process name                             Usage      |\n",
       "|=============================================================================|\n",
+      "|  No running processes found                                                 |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -117,17 +118,17 @@
      "text": [
       "tensorflow\n",
       "tensorflow\n",
-      "8a198b98fac2639396044db9ae86d3a263113627abf93827b8851bd3d4b570e0\n",
-      "[I 02:36:47.287 NotebookApp] Writing notebook server cookie secret to /root/.local/share/jupyter/runtime/notebook_cookie_secret\n",
-      "[I 02:36:47.304 NotebookApp] Serving notebooks from local directory: /notebooks\n",
-      "[I 02:36:47.304 NotebookApp] The Jupyter Notebook is running at:\n",
-      "[I 02:36:47.304 NotebookApp] http://(8a198b98fac2 or 127.0.0.1):8888/?token=be7fbe6620713c6da4d129affc3d3c35f0b8ad8866682afe\n",
-      "[I 02:36:47.304 NotebookApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).\n",
-      "[C 02:36:47.305 NotebookApp] \n",
+      "8c84fec830325682b4933e96a80fc95612fcae5e63e0d99a29126fc91e070ac3\n",
+      "[I 02:51:31.016 NotebookApp] Writing notebook server cookie secret to /root/.local/share/jupyter/runtime/notebook_cookie_secret\n",
+      "[I 02:51:31.033 NotebookApp] Serving notebooks from local directory: /notebooks\n",
+      "[I 02:51:31.033 NotebookApp] The Jupyter Notebook is running at:\n",
+      "[I 02:51:31.033 NotebookApp] http://(8c84fec83032 or 127.0.0.1):8888/?token=452185a0bb92e3736dfc469f273a2d9fb77e0c5fbc6b4024\n",
+      "[I 02:51:31.033 NotebookApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).\n",
+      "[C 02:51:31.033 NotebookApp] \n",
       "    \n",
       "    Copy/paste this URL into your browser when you connect for the first time,\n",
       "    to login with a token:\n",
-      "        http://(8a198b98fac2 or 127.0.0.1):8888/?token=be7fbe6620713c6da4d129affc3d3c35f0b8ad8866682afe\n"
+      "        http://(8c84fec83032 or 127.0.0.1):8888/?token=452185a0bb92e3736dfc469f273a2d9fb77e0c5fbc6b4024\n"
      ]
     }
    ],
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
        "12  tegra-ubuntu  aarch64    1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +290,7 @@
      "text": [
       "tensorflow\n",
       "tensorflow\n",
-      "a3a5f04656421b1da26e12630282429970b81aabb7915eb7a8c59a02cefc1977\n",
+      "8e96f3606aae68d6073490c07090c84b600b25297737f2916c91d19eaaf4f3a9\n",
       "standard_init_linux.go:211: exec user process caused \"exec format error\"\n"
      ]
     }
@@ -312,7 +313,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tensorflow seems to not work on arm cpu, I need to cook a image for it. "
+    "Tensorflow seems to not work on arm cpu, I need to cook a image for it. \n",
+    "\n",
+    "\n",
+    "References:\n",
+    "- https://github.com/Technica-Corporation/Tegra-Docker\n",
+    "- https://www.tensorflow.org/guide/gpu\n",
+    "- https://www.tensorflow.org/tfx/serving/docker\n",
+    "- https://github.com/tensorflow/serving\n",
+    "- https://www.tensorflow.org/tutorials/quickstart/beginner\n",
+    "- https://github.com/tensorflow/examples\n",
+    "- https://github.com/tensorflow/tensorflow/tree/master/tensorflow/tools/dockerfiles\n",
+    "- https://docs.nvidia.com/cuda/cuda-c-best-practices-guide/index.html#flexible-upgrade-path"
    ]
   }
  ],
