Connecting the home mesh

--- a/08-deploy-basic-infra/runbook-basic-infra.ipynb
+++ b/08-deploy-basic-infra/runbook-basic-infra.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,13 +130,13 @@
     "source ../common/env.sh \n",
     "while read ip; do\n",
     "    export DOCKER_HOST=\"tcp://$ip:2376\"\n",
-    "    docker ps --filter  --format \"$ip|{{.ID}}|{{.Image}}|{{.Ports}}|{{.RunningFor}}\"  >> containers.csv 2>/dev/null || :\n",
+    "    docker ps   --format \"$ip|{{.ID}}|{{.Image}}|{{.Ports}}|{{.RunningFor}}\"  >> containers.csv 2>/dev/null || :\n",
     "done <consul-ip.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -170,17 +170,97 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>dbf4365e5039</td>\n",
+       "      <td>6zar/pyspark_docker</td>\n",
+       "      <td>0.0.0.0:8888-&gt;8888/tcp</td>\n",
+       "      <td>3 days ago</td>\n",
+       "      <td>nuc-03</td>\n",
+       "      <td>x86_64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fe1bee3b22f6</td>\n",
+       "      <td>amkay/sensor-exporter</td>\n",
+       "      <td>0.0.0.0:9255-&gt;9255/tcp</td>\n",
+       "      <td>3 days ago</td>\n",
+       "      <td>nuc-03</td>\n",
+       "      <td>x86_64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>f941a7dc93e0</td>\n",
+       "      <td>prom/node-exporter:v0.18.0</td>\n",
+       "      <td>0.0.0.0:9100-&gt;9100/tcp</td>\n",
+       "      <td>3 days ago</td>\n",
+       "      <td>nuc-03</td>\n",
+       "      <td>x86_64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3339d746d6a7</td>\n",
+       "      <td>consul:latest</td>\n",
+       "      <td>8300-8302/tcp, 8301-8302/udp, 8600/tcp, 8600/u...</td>\n",
+       "      <td>3 months ago</td>\n",
+       "      <td>nuc-03</td>\n",
+       "      <td>x86_64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>c817dc67b992</td>\n",
+       "      <td>nginx</td>\n",
+       "      <td>0.0.0.0:80-&gt;80/tcp</td>\n",
+       "      <td>3 months ago</td>\n",
+       "      <td>nuc-03</td>\n",
+       "      <td>x86_64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7f7f98f6ac85</td>\n",
+       "      <td>couchdb</td>\n",
+       "      <td>0.0.0.0:4369-&gt;4369/tcp, 0.0.0.0:5984-&gt;5984/tcp...</td>\n",
+       "      <td>3 months ago</td>\n",
+       "      <td>nuc-03</td>\n",
+       "      <td>x86_64</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [id, image, ports, runnning, hostname, arch, gpu]\n",
-       "Index: []"
+       "             id                       image  \\\n",
+       "0  dbf4365e5039         6zar/pyspark_docker   \n",
+       "1  fe1bee3b22f6       amkay/sensor-exporter   \n",
+       "2  f941a7dc93e0  prom/node-exporter:v0.18.0   \n",
+       "3  3339d746d6a7               consul:latest   \n",
+       "4  c817dc67b992                       nginx   \n",
+       "5  7f7f98f6ac85                     couchdb   \n",
+       "\n",
+       "                                               ports      runnning hostname  \\\n",
+       "0                             0.0.0.0:8888->8888/tcp    3 days ago   nuc-03   \n",
+       "1                             0.0.0.0:9255->9255/tcp    3 days ago   nuc-03   \n",
+       "2                             0.0.0.0:9100->9100/tcp    3 days ago   nuc-03   \n",
+       "3  8300-8302/tcp, 8301-8302/udp, 8600/tcp, 8600/u...  3 months ago   nuc-03   \n",
+       "4                                 0.0.0.0:80->80/tcp  3 months ago   nuc-03   \n",
+       "5  0.0.0.0:4369->4369/tcp, 0.0.0.0:5984->5984/tcp...  3 months ago   nuc-03   \n",
+       "\n",
+       "     arch  gpu  \n",
+       "0  x86_64    0  \n",
+       "1  x86_64    0  \n",
+       "2  x86_64    0  \n",
+       "3  x86_64    0  \n",
+       "4  x86_64    0  \n",
+       "5  x86_64    0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
